<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BitmapActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/marte"
        android:src="@drawable/sole_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <Button
        android:id="@+id/buttonUrano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urano" />

    <Button
        android:id="@+id/buttonSole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sole" />

    <Button
        android:id="@+id/buttonSaturno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturno" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewMarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/marte"
        android:src="@drawable/marte_tag" />


</LinearLayout>